<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PortalDirect</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="usernameLabel">Username</string>
    <string name="passwordLabel">Password</string>
    <string name="getAutoInsuranceQuoteLabel">Get Auto Insurance Quote</string>
    <string name="forgotPasswordLabel">Forgot Password</string>
    <string name="loginButtonLabel">Login</string>
    <string name="pioneerLogo">Pioneer PortalDirect</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_quote_list">QuoteListActivity</string>
    <string name="title_activity_quote_tab">PortalDirect - Auto Quote</string>
    <string name="title_activity_quote_applicant">QuoteApplicantActivity</string>
    <string name="title_activity_quote_driver">QuoteDriverActivity</string>
    <string name="title_activity_quote_vehicle">QuoteVehicleActivity</string>
    <string name="title_activity_quote_coverage">QuoteCoverageActivity</string>
    <string name="title_activity_quote_review">QuoteReviewActivity</string>
    <string name="header_quoteApplicant">Auto Quote - Applicant Information</string>
    <string name="header_quoteDriver">Auto Quote - Driver Information</string>
    <string name="header_quoteVehicle">Auto Quote - Vehicle Information</string>
    <string name="label_firstName">First Name</string>
    <string name="label_middleInitial">Middle Initial</string>
    <string name="label_lastName">Last Name</string>
    <string name="label_address">Address</string>
    <string name="label_city">City</string>
    <string name="label_state">State</string>
    <string name="label_zip">Zip</string>
    <string name="label_dateBirth">Date of Birth</string>
    <string name="label_ssn">SSN#</string>
    <string name="label_email">Email Address</string>
    <string name="label_residency">Residency</string>
    <string name="label_gender">Gender</string>
    <string name="label_maritalStatus">Marital Status</string>
    <string name="label_relationApplicant">Applicant Relation</string>
    <string name="label_Dependents">Dependents</string>
    <string name="label_licenseState">License State</string>
    <string name="label_licenseNum">License #</string>
    <string name="label_occupation">Occupation</string>
    <string name="label_incomeLevel">Income Level</string>
    <string name="label_bodilyInjury">Bodily Injury</string>
    <string name="label_propertyDamage">Property Damage</string>
    <string name="label_medicalProvider">Medical Provider</string>
    <string name="label_personalInjuryProtection">Personal Injury Protection</string>
    <string name="label_propertyProtection">Property Protection</string>
    <string name="label_uninsuredMotoristLimit">Uninsured Motorist Limit</string>
    <string name="label_underInsuredLimit">Underinsured Motorist Limit</string>
    <string name="label_miniTort">Mini Tort</string>
    <string name="radioButton_Male">Male</string>
    <string name="radioButton_Female">Female</string>
    <string name="radioButton_Married">Married</string>
    <string name="radioButton_Single">Single</string>
    <string name="radioButton_Yes">Yes</string>
    <string name="radioButton_No">No</string>
    <string name="button_quoteSaveGotoNext">Save and Go to Next Step</string>
    <string name="button_quoteSaveNewVehicle">Add Vehicle</string>
    <string name="button_quoteSaveVehicleChanges">Save Vehicle Changes</string>
    <string name="button_quoteVehicleCancel">Cancel</string>
    <string name="button_AddVehicle">Add Vehicle</string>
    <string name="button_AddQuote">Add Quote</string>
    <string name="button_SubmitQuote">Submit Quote</string>
    <string name="header_quoteList">Auto Quote List</string>
    <string name="header_quoteVehicleList">Quote Vehicle List</string>
    <string name="header_quoteCoverage">Quote Liability Coverages</string>
    <string name="changeButton">Change</string>
    <string name="button_checkVIN">Lookup VIN</string>
    <string name="label_VIN">VIN</string>
    <string name="label_vehicleType">Vehicle Type</string>
    <string name="label_year">Year</string>
    <string name="label_make">Make</string>
    <string name="label_model">Model</string>
    <string name="label_antiLockBrakes">Anti Lock Brakes</string>
    <string name="label_passiveRestraint">Passive Restraint</string>
    <string name="label_antiTheft">Anti-Theft Device</string>
    <string name="label_vehicleUsage">Vehicle Usage</string>
    <string name="label_annualMileage">Annual Mileage</string>
    <string name="label_milesWork">Miles to Work</string>
    <string name="label_workWeek">Work Week</string>
    <string name="label_carpool">Car Pool</string>
    <string name="label_garagingZipCode">Garaging Zip Code</string>
    <string name="label_splitCity">Split City</string>
    <string name="quoteApplicantRedirectMessage">Please fill out Applicant info first</string>
    <string name="VINText">JM1FE173850159017</string>
    <string name="title_activity_quote_assign_driver">QuoteAssignDriver</string>

</resources>
