<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuoteDriverActivity" >

    <TextView
        android:id="@+id/textView1"
        style="@style/PDActivityHeader"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/header_quoteDriver"
        android:textAlignment="center" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView            android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_firstName" />

            <EditText
                android:id="@+id/txtFirstName"
                style="@style/PDEditText"
                android:hint="@string/label_firstName" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_middleInitial" />

            <EditText
                android:id="@+id/txtMiddleInitial"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_middleInitial"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_lastName" />

            <EditText
                android:id="@+id/txtLastName"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_lastName"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_dateBirth" />

            <EditText
                android:id="@+id/txtDateBirth"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_dateBirth"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_gender"
                android:paddingTop="5dp" />

            <RadioGroup android:layout_width="fill_parent"
        		android:orientation="horizontal"
        		android:checkedButton="@+id/rdMale" android:id="@+id/Gender">

                <RadioButton android:id="@+id/rdMale"
                    android:width="80dp"
                    android:text="@string/radioButton_Male" />

                <RadioButton android:id="@+id/rdFemale"
                    android:width="100dp"
                    android:text="@string/radioButton_Female" />

        	</RadioGroup>

        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_maritalStatus"
                android:paddingTop="5dp" />

            <RadioGroup android:layout_width="fill_parent"
        		android:orientation="horizontal"
        		android:checkedButton="@+id/rdMarried" android:id="@+id/MaritalStatus">

                <RadioButton android:id="@+id/rdMarried"
                    android:width="100dp"
                    android:text="@string/radioButton_Married" />

                <RadioButton android:id="@+id/rdSingle"
                    android:width="100dp"
                    android:text="@string/radioButton_Single" />

        	</RadioGroup>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_relationApplicant" />

            <EditText
                android:id="@+id/txtRelationApplicant"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_relationApplicant"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_Dependents" 
                android:paddingTop="10dp" />

            <RadioGroup android:layout_width="fill_parent"
        		android:orientation="horizontal"
        		android:checkedButton="@+id/rdYes" android:id="@+id/Dependents">

                <RadioButton android:id="@+id/rdYes"
                    android:width="70dp"
                    android:text="@string/radioButton_Yes" />

                <RadioButton android:id="@+id/rdNo"
                    android:width="70dp"
                    android:text="@string/radioButton_No" />

        	</RadioGroup>

        </TableRow>

        <TableRow
            android:id="@+id/TableRow05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_licenseState" />

            <EditText
                android:id="@+id/txtLicenseState"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_licenseState"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_licenseNum" />

            <EditText
                android:id="@+id/txtLicenseNum"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_licenseNum"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_occupation" />

            <EditText
                android:id="@+id/txtOccupation"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_occupation"
                android:inputType="text" />
        </TableRow>
        
        <TableRow
            android:id="@+id/TableRow08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_incomeLevel" />

            <EditText
                android:id="@+id/txtIncomeLevel"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_incomeLevel"
                android:inputType="text" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnSaveNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/button_quoteSaveGotoNext" />
</RelativeLayout>
