<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuoteVehicleActivity" >
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:layout_weight="1">
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical">
    
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >
        
        <TableRow>
            <TextView
        android:id="@+id/textView1"
        style="@style/PDActivityHeader"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/header_quoteVehicle"
        android:textAlignment="center" />
        </TableRow>
        
        <TableRow>
            <Button
        android:id="@+id/btnSaveNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/button_quoteSaveGotoNext" />
            <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/button_quoteVehicleCancel" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_VIN" />

            <EditText
                android:id="@+id/txtVIN"
                style="@style/PDEditText"
                android:hint="@string/label_VIN"
                android:text="@string/VINText" >
                <requestFocus />
            </EditText>
            <Button
        		android:id="@+id/btnCheckVIN"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		style="?android:attr/buttonStyleSmall"
        		android:text="@string/button_checkVIN" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_vehicleType" />
            
            <EditText
                android:id="@+id/txtVehicleType"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_vehicleType"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_year" />

            <EditText
                android:id="@+id/txtYear"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_year"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_make" />

            <EditText
                android:id="@+id/txtMake"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_make"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_model" />

            <EditText
                android:id="@+id/txtModel"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_model"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_antiLockBrakes" />

            <EditText
                android:id="@+id/txtAntiLockBrakes"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_antiLockBrakes"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_passiveRestraint" />

            <EditText
                android:id="@+id/txtPassiveRestraint"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_passiveRestraint"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_antiTheft" />

            <EditText
                android:id="@+id/txtAntiTheft"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_antiTheft"
                android:inputType="text"
                />

        </TableRow>

        <TableRow
            android:id="@+id/TableRow05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_vehicleUsage" />

            <EditText
                android:id="@+id/txtVehicleUsage"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_vehicleUsage"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_annualMileage" />

            <EditText
                android:id="@+id/txtAnnualMileage"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_annualMileage"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_milesWork" />

            <EditText
                android:id="@+id/txtMilesWork"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_milesWork"
                android:inputType="text" />
        </TableRow>
        
        <TableRow
            android:id="@+id/TableRow08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_workWeek" />

            <EditText
                android:id="@+id/txtWorkWeek"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_workWeek"
                android:inputType="text" />
        </TableRow>
        
        <TableRow
            android:id="@+id/TableRow09"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_carpool"
                android:paddingTop="10dp" />

            <RadioGroup android:layout_width="fill_parent"
        		android:orientation="horizontal"
        		android:checkedButton="@+id/rdNo" android:id="@+id/Carpool">

                <RadioButton android:id="@+id/rdNo"
                    android:width="80dp"
                    android:text="@string/radioButton_No" />

                <RadioButton android:id="@+id/rdYes"
                    android:width="100dp"
                    android:text="@string/radioButton_Yes" />

        	</RadioGroup>
        </TableRow>
        
        <TableRow
            android:id="@+id/TableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_garagingZipCode" />

            <EditText
                android:id="@+id/txtGaragingZipCode"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_garagingZipCode"
                android:inputType="text" />
        </TableRow>
        
        <TableRow
            android:id="@+id/TableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_splitCity" />

            <EditText
                android:id="@+id/txtSplitCity"
                style="@style/PDEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_splitCity"
                android:inputType="text" />
        </TableRow>       
        
    </TableLayout>

    
   </LinearLayout>
</ScrollView>
</RelativeLayout>
