<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/lighthouse"
     >
    
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <ImageView
        		android:id="@+id/imgPioneerLogo"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:contentDescription="@string/pioneerLogo"
        		android:src="@drawable/pioneertranslogo150px" />            
        </TableRow>
        
        <TableRow
            android:layout_marginTop="40dp"
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/usernameLabel"
                android:text="PA00086826"
                android:background="#99CCCCCC" 
                />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/passwordLabel"
                android:inputType="textPassword"
                android:text="TestingQA10"
                android:background="#99CCCCCC" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:hint="@string/loginButtonLabel"
        android:onClick="Login_Click"
        android:text="@string/loginButtonLabel" />
        </TableRow>
    </TableLayout>
